[metadata]
name = telenvi
version = 2.32
author = Thibaut Duvanel, Julien Pellen
author_email = thibaut.duvanel@univ-savoie.fr
description = Some remote sensing tricks from telenvi master students
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyzak117/telenvi
project_urls =
    Bug Tracker = https://github.com/pyzak117/telenvi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src